tests/Driver/no-input.sora
// RUN: sorac 2>&1 | FileCheck %s
// CHECK: error: no input file
